--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
   "name": "mini MEAN login routing",
   "version": "0.0.1",
-  "private": flase,
+  "private": false,
   "scripts": {
     "start": "node ./bin/www"
-  },
-  "engines": {
-    "node": "0.12.5"
   },
   "author": "Roberto Vega ",
   "license": "MIT",
